--- a/docs/pkgdown.css
+++ b/docs/pkgdown.css
@@ -150,7 +150,7 @@ a.anchor {
 /* Nice scrolling for wide elements --------------------------------------- */
 
 table {
-  display: block;
+  /* display: block; # removed to make paged tables work */ 
   overflow: auto;
 }
 
@@ -216,4 +216,17 @@ a.sourceLine:hover {
 
 .hasCopyButton:hover button.btn-copy-ex {
   visibility: visible;
+}
+
+/* mark.js ----------------------------*/
+
+mark {
+  background-color: rgba(255, 255, 51, 0.5);
+  border-bottom: 2px solid rgba(255, 153, 51, 0.3);
+  padding: 1px;
+}
+
+/* vertical spacing after htmlwidgets */
+.html-widget {
+  margin-bottom: 10px;
 }
